app/assets/stylesheets/application/base.css.less
@import "variables";

html, body {
  height: 100%;
}

body {
  background: image-url('bg3.png');
  font-size: 16px;
}

a {
  cursor: pointer;
  &:hover     { text-decoration: underline; }
  &.tip       { text-decoration: none; color: @mossGreen; }
  &[disabled] { color: #eee; cursor: default; }
}

.slide-down {
  max-height: 0;
  transition: max-height 0.3s ease;
  overflow: hidden;
  &.slid { max-height: 400px; transition: max-height 0.3s ease; }
}

.rareshare.navbar {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  box-shadow: 0 0 0.2em 0.04em black;
  width: 100%;

  .container { width: 960px; }

  .navbar-inner {
    border-radius: 0;
    border: 0;
    border-bottom: 1px solid @navbarBorderColor;

    ul.nav > li {
      line-height: 30px;
    }
  }

  .brand {
    width: 130px;
    padding: 5px 20px;
  }

  .welcome-message {
    padding-right: 14px;
  }

  .navbar-search {
    @borderRadius: 4px;
    margin-top: 10px;
    position: relative;
    // line-height: 60px;

    input[name=q] {
      border-radius: @borderRadius;
      background-color: @lightMossGreen;
      width: 300px;
      margin-bottom: 5px;
      padding-left: 10px;
    }

    .search_append {
      margin-left: -30px;
      position: absolute;
      top: 5px;
      right: 10px;
      // line-height: 50px;
      color: @darkBlueGrey;
    }
  }

  .dropdown-menu {
    width: 100%;
    background-color: lighten(@darkBlueGrey, 20%);
    > li > a {
      color: @paleBlue;
      &.text-warning { color: @warningText; }
    }
  }
}

.navbar .nav > li > .dropdown-menu {
  margin-top: 0;
  border-radius: 0;
  -webkit-border-radius: 0;

  margin-right: -1px;

  &:before, &:after { display: none; } // Hide dropdown carets.

  .header span {
    display: block;
    background-color: #eee;
    border-bottom: 1px solid #ccc;
    padding: 5px 20px;
    font-size: 12px;
    text-transform: uppercase;
    margin-top: -5px;
  }
}

table {
  tr > th > small {
    color: #999;
    display: block;
    font-weight: 300;
  }
}

.content-root {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto -@footerHeight;

  > .content.container {
    padding-top: 70px;

    > .inner-content {
      min-height: 450px;
      padding: 20px 20px 20px 20px;
      margin-bottom: 20px;
      margin-left: -20px;
      background-color: white;
      border-radius: 4px;
      box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.2);

      .sidebar {
        > .btn { width: 94px; margin-left: 10px; font-size: 14px; margin-bottom: 10px; }
      }
    }
  }
}

body > footer, .content-root > .push {
  height: @footerHeight;
}

body > footer {
  .gradient(top, @lightMossGreen, darken(@lightMossGreen, 10%));
  box-shadow: 0 0 0.2em 0.04em @darkMossGreen;

  > .container {
    padding-top: 20px;
  }

  ul.nav {
    > li {
      font-size: 14px;
      display: inline-block;
      width: 140px;
      > a { &:hover { background: none; } }
    }
  }
}
/* ... */

